add "all games for team" window